crates/biome_cli/tests/snapshots/main_commands_inspect_config/matching_extended_override_keeps_source_axes.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter.lineWidth --path=file.test.js
```

## `biome.json`

```json
{ "extends": ["base.json"] }
```

## `base.json`

```json
{
  "overrides": [
    {
      "includes": ["**/*.test.js"],
      "formatter": { "lineWidth": 120 }
    }
  ]
}
```

# Emitted Messages

```block
base.json:5:35 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.lineWidth has the following value.
  
    3 │     {
    4 │       "includes": ["**/*.test.js"],
  > 5 │       "formatter": { "lineWidth": 120 }
      │                                   ^^^
    6 │     }
    7 │   ]
  
  i This value is provided by override 0 in the extended configuration.
  
  i The override matched file.test.js using **/*.test.js.
  

```
