crates/biome_cli/tests/snapshots/main_commands_inspect_config/no_configuration_is_empty.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Resolved configuration from default configuration.
  
  {}
  

```
