crates/biome_cli/tests/snapshots/main_commands_inspect_config/non_matching_override_keeps_base_value.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter.lineWidth --path=file.js
```

## `biome.json`

```json
{
  "formatter": { "lineWidth": 100 },
  "overrides": [
    {
      "includes": ["**/*.test.js"],
      "formatter": { "lineWidth": 120 }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:2:31 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.lineWidth has the following value.
  
    1 │ {
  > 2 │   "formatter": { "lineWidth": 100 },
      │                               ^^^
    3 │   "overrides": [
    4 │     {
  
  i This value is provided by the root configuration.
  

```
