crates/biome_cli/tests/snapshots/main_commands_inspect_config/null_value_does_not_replace_extended_provenance.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter.lineWidth
```

## `biome.json`

```json
{
  "extends": ["base.json"],
  "formatter": { "lineWidth": null }
}
```

## `base.json`

```json
{ "formatter": { "lineWidth": 100 } }
```

# Emitted Messages

```block
base.json:1:31 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.lineWidth has the following value.
  
  > 1 │ { "formatter": { "lineWidth": 100 } }
      │                               ^^^
  
  i This value comes from base.json, extended by biome.json.
  

```
