crates/biome_cli/tests/snapshots/main_commands_inspect_config/path_requires_key.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config --path=file.js
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Missing argument KEY
  
  i Type the following command for more information
  
  $ biome inspect config --help
  


```
