crates/biome_cli/tests/snapshots/main_commands_inspect_config/replaced_composite_omits_superseded_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config linter.rules.suspicious.noConsole
```

## `biome.json`

```json
{
  "extends": ["base.json"],
  "linter": {
    "rules": {
      "suspicious": {
        "noConsole": {
          "level": "warn",
          "options": { "allow": ["error"] }
        }
      }
    }
  }
}
```

## `base.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": { "noConsole": "error" }
    }
  }
}
```

# Emitted Messages

```block
biome.json:6:22 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key linter.rules.suspicious.noConsole has the following value.
  
     4 │     "rules": {
     5 │       "suspicious": {
   > 6 │         "noConsole": {
       │                      ^
   > 7 │           "level": "warn",
   > 8 │           "options": { "allow": ["error"] }
   > 9 │         }
       │         ^
    10 │       }
    11 │     }
  
  i This value is provided by the root configuration.
  

```
